# Syndrome-Learning-QEC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
demo/: learn_circuit_lep_fromsyndrome.py  qec_learn_syndrome.ipynb  scaling_records_qec.json
sim_qec/: __init__.py  analytic_log_channel.py  circuit_decoders.py  circuit_lep_prediction.py  dem_sim.py  noise_model.py  pipeline.py  utils.py  walsh_hadamard.py
sim_qec/codes_family/: classical_codes.py  est_distance.py  hpc_lp.py
sim_qec/detector_error_models/: circuit_lep_prediction.py  circuit_scheduling.py  dem_sim.py  noise_model.py
sim_qec/legacy/: circuit_sim.py  compute_equiclass.py  decoders.py  pauli_character_basis.py
